--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
                         <label class="avatar-2"><input type="radio" name="avatar" value="avatar-2" /></label>
                         <label class="avatar-3"><input type="radio" name="avatar" value="avatar-3" /></label>
                     </fieldset>
-                    <input type="text" placeholder="Name"/>
-                    <input type="email" placeholder="Email address"/>
+                    <input type="text" placeholder="Name" name="name"/>
+                    <input type="email" placeholder="Email address" name="email"/>
                     <button id="add-user">Add user</button>
+                    <div class="error hidden" id="form-error">Oops ! That didn't work.. Do you mind trying that again?</div>
                 </form>
         </section>
     </section>
