Catalog - first steps

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <script src="/bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/video.js@7.13.3/dist/video-js.css">
 </head>
 <body>
 
 <section id="gregflix">
     <section id="content">
-        <header>
+        <header class="homepage">
             <img src="/img/gregflix.png" alt="GregFlix logo"/>
             <h1>A video on demand demo by Grégoire Duché</h1>
         </header>
@@ -32,7 +33,9 @@
     </section>
 </section>
 
-
+<script src="https://unpkg.com/video.js@7.13.3/dist/video.js"></script>
+<script src="https://cdn.dashjs.org/latest/dash.all.debug.js"></script>
+<script src="https://unpkg.com/videojs-contrib-dash@5.0.0/dist/videojs-dash.js"></script>
 
 </body>
 </html>
