Adding about info

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                 </form>
         </section>
     </section>
+    <section class="about">
+        <h4>What's this?</h4>
+        <p>Gregflix is a showcase of my front end skills. This is a from scratch application made using only Javascript and CSS.</p>
+        <p>This version has been built in <em>5 hours 20 minutes</em></p>
+        <!--a href="/about.html">Wanna know more?</a-->
+    </section>
 </section>
 
 <script src="https://unpkg.com/video.js@7.13.3/dist/video.js"></script>
