--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script src="/bundle.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/video.js@7.13.3/dist/video-js.css">
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -39,7 +39,7 @@
     </section>
 </section>
 
-<script src="https://unpkg.com/video.js@7.13.3/dist/video.js"></script>
+<script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
 <script src="https://cdn.dashjs.org/latest/dash.all.debug.js"></script>
 <script src="https://unpkg.com/videojs-contrib-dash@5.0.0/dist/videojs-dash.js"></script>
 
